add et delete avis

--- a/views/portail.ejs
+++ b/views/portail.ejs
@@ -33,7 +33,18 @@ Scanner un code QR ou entrer un matricule
            
                 <div>
                     <label for="avis">Ajouter un avis:</label>
-                    <input type="text" id="avis" name="avis" required>
+                    <input type="text" id="avis" name="avis">
+                </div>
+               
+            
+        </td>
+    </tr>
+    <tr>
+        <td>
+           
+                <div>
+                    <label for="avis">Supprimer un avis:</label>
+                    <input type="text" id="deleteAvis" name="deleteAvis">
                 </div>
                
             
